--- a/srcs/.env
+++ b/srcs/.env
@@ -1,46 +1,33 @@
 
-# MYSQL 
-MYSQL_DATABASE=wordpress
-MYSQL_USER=kammi
-MYSQL_PASSWORD=kammi
-MYSQL_ROOT_PASSWORD=kammi
+
+# ========== URL ========== #
+DOMAIN_NAME=kammi.42.fr
+# ========== USERS ========== #
+USER=kammi
+# ========== CERTIFICATES ========== #
+CERTS_KEY=/etc/nginx/ssl/ssl.key
+CERTS_CRT=/etc/nginx/ssl/ssl.crt
+# ========== MYSQL ========== #
+MYSQL_HOST=mariadb
+MYSQL_ROOT_PASSWORD=qwerty
 MYSQL_PORT=3306
 MYSQL_ADRRESS=0.0.0.0
-
-# WORDPRESS
-DOMAIN_NAME=kammi.42.fr
-WORDPRESS_ADMIN_USER=kammi
-WORDPRESS_ADMIN_PASSWORD=kammi
+# ========== WORDPRESS ========== #
+WORDPRESS_DB_NAME=wordpress
+WORDPRESS_DB_USER=wordpress
+WORDPRESS_DB_PASSWORD=qwerty
+WORDPRESS_DB_PREFIX=wp_
 WORDPRESS_PATH=/var/www/wordpress
+WORDPRESS_TITLE=42Inception
+WORDPRESS_HOST=wordpress
+WORDPRESS_PORT=9000
+# WORDPRESS USERS
+# Admin
+WORDPRESS_ADMIN_USER=kammi
+WORDPRESS_ADMIN_PASSWORD=qwerty
+WORDPRESS_ADMIN_EMAIL=kammi@kammi.42.fr
+# User1
+WORDPRESS_USER1_USER=karim
+WORDPRESS_USER1_PASSWORD=qwerty
+WORDPRESS_USER1_EMAIL=karim@kammi.42.fr
 
-# ========== USERS ========== #
-
-
-# # ========== MYSQL ========== #
-# MYSQL_HOST=mariadb
-# MYSQL_ROOT_PASSWORD=1234
-# MYSQL_PORT=3306
-# MYSQL_ADRRESS=0.0.0.0
-# # ========== WORDPRESS ========== #
-# WORDPRESS_DB_NAME=wordpress
-# WORDPRESS_DB_USER=wordpress
-# WORDPRESS_DB_PASSWORD=1234
-# WORDPRESS_DB_PREFIX=wp_
-# WORDPRESS_PATH=/var/www/wordpress
-# WORDPRESS_TITLE=42Inception
-# WORDPRESS_HOST=wordpress
-# WORDPRESS_PORT=9000
-# # WORDPRESS USERS
-# # Admin
-# WORDPRESS_ADMIN_USER=
-# WORDPRESS_ADMIN_PASSWORD=1234
-# WORDPRESS_ADMIN_EMAIL=
-# # User1
-# WORDPRESS_USER1_USER=
-# WORDPRESS_USER1_PASSWORD=1234
-# WORDPRESS_USER1_EMAIL=
-
-# # ========== BONUS ========== #
-# REDIS_PASSWORD=1234
-# FTP_USER=
-# FTP_PASSWORD=1234
