--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -3,45 +3,47 @@ services:
   mariadb:
     image: mariadb
     container_name: mariadb
+    build: ./requirements/mariadb
+    env_file:
+      - .env
     volumes:
-      - mariadb_data:/var/lib/mysql
+      - mariadb:/var/lib/mysql
     networks:
       - inception
-    build: 
-      context: ./requirements/mariadb
-      dockerfile: Dockerfile
-    env_file: .env
     restart: always
 
-  
+ 
 
   nginx:
+    image: nginx
     container_name: nginx
+    build: ./requirements/nginx
+    env_file:
+      - .env
+    depends_on:
+      - wordpress
+
+    ports:
+      - 443:443
     volumes:
-      - wordpress:$WORDPRESS_PATH
+      - wordpress:${WORDPRESS_PATH}
     networks:
       - inception
-    depends_on: 
-      - wordpress
-    build: 
-      context: ./requirements/nginx
-      dockerfile: Dockerfile
-    env_file: .env
-    ports:
-      - "443:443"
     restart: on-failure
 
   
   wordpress:
+    image: wordpress
     container_name: wordpress
+    build: ./requirements/wordpress
+    env_file:
+      - .env
+    depends_on:
+      - mariadb
     volumes:
-      - wordpress:$WORDPRESS_PATH
+      - wordpress:${WORDPRESS_PATH}
     networks:
       - inception
-    build: 
-      context: ./requirements/wordpress
-      dockerfile: Dockerfile
-    env_file: .env
     restart: on-failure
 
 networks:
@@ -49,6 +51,17 @@ networks:
     driver: bridge
 
 volumes:
-  mariadb_data:
+  mariadb:  
+    driver: local
+    driver_opts:
+      type: none
+      device: /home/kammi/data/mysql
+      o: bind
   wordpress:
+    driver: local
+    driver_opts:
+      type: none
+      device: /home/kammi/data/wordpress
+      o: bind
  
+
