--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -15,9 +15,23 @@ http {
         server_name $DOMAIN_NAME;
         index index.php;
 
+        location / {
+            try_files $uri $uri/ /index.php$is_args$args;
+        }
+        
         location ~ \.php$ {
             include snippets/fastcgi-php.conf;
             fastcgi_pass wordpress:9000;
         }
+
+        # location ~ \.php$ {
+        #     include fastcgi_params;
+        #     fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        #     fastcgi_pass wordpress:9000;
+        #     fastcgi_index index.php;
+        #     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        #     fastcgi_param PATH_INFO $fastcgi_path_info;
+        #     try_files $uri =404;
+        # }
     }
 }
