--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -3,7 +3,7 @@
 # Base image
 FROM debian:bullseye
 
-# INSTALL DEPENDENCIES
+# Installer les dependances
 RUN		apt -y update && \
 		apt install -y php && \
 		PHP_VERSION=$(php -v | head -n 1 | cut -d " " -f 2 | cut -d "." -f 1,2) && \
@@ -17,14 +17,12 @@ RUN		apt -y update && \
 		rm -rf /etc/php/${PHP_VERSION}/fpm/pool.d/www.conf && \
 		mkdir -p /run/php
 
-# LAUNCH SCRIPT
+# Copier les fichiers de configuration
 COPY	./tools/script.sh /tmp/script.sh
 COPY	./conf/www.conf /tmp/www.conf
-# COPY	./conf/www.conf /etc/php/${PHP_VERSION}/fpm/pool.d/www.conf
+
 
 RUN		chmod 755 /tmp/script.sh
 
-# Not supposed to be exposed to the host machine
-# EXPOSE	9000
-
+# Lancer le script
 ENTRYPOINT	["sh", "/tmp/script.sh"]
