--- a/srcs/.env
+++ b/srcs/.env
@@ -1,18 +1,18 @@
 
 
-# ========== URL ========== #
+
 DOMAIN_NAME=kammi.42.fr
-# ========== USERS ========== #
 USER=kammi
-# ========== CERTIFICATES ========== #
-CERTS_KEY=/etc/nginx/ssl/ssl.key
-CERTS_CRT=/etc/nginx/ssl/ssl.crt
-# ========== MYSQL ========== #
-MYSQL_HOST=mariadb
+
+
+# Databases
+
 MYSQL_ROOT_PASSWORD=qwerty
 MYSQL_PORT=3306
 MYSQL_ADRRESS=0.0.0.0
-# ========== WORDPRESS ========== #
+
+# Wordpress
+
 WORDPRESS_DB_NAME=wordpress
 WORDPRESS_DB_USER=wordpress
 WORDPRESS_DB_PASSWORD=qwerty
@@ -21,12 +21,13 @@ WORDPRESS_PATH=/var/www/wordpress
 WORDPRESS_TITLE=42Inception
 WORDPRESS_HOST=wordpress
 WORDPRESS_PORT=9000
-# WORDPRESS USERS
-# Admin
+
+
+
 WORDPRESS_ADMIN_USER=kammi
 WORDPRESS_ADMIN_PASSWORD=qwerty
 WORDPRESS_ADMIN_EMAIL=kammi@kammi.42.fr
-# User1
+
 WORDPRESS_USER1_USER=karim
 WORDPRESS_USER1_PASSWORD=qwerty
 WORDPRESS_USER1_EMAIL=karim@kammi.42.fr
